# LocalVQE

./: README.md  flake.nix
ggml/: CMakeLists.txt  audio_io.cpp  audio_io.h  bench.cpp  common.cpp  common.h  eval_graph.cpp  localvqe.cpp  localvqe_api.cpp  localvqe_api.h  localvqe_graph.cpp  localvqe_graph.h  test_streaming.cpp
ggml/cmake/: download_asset.cmake
pytorch/: README.md
pytorch/localvqe/: align.py
